cfn_benchmark/cfn_templates/rickdevera__oh_cnapp/jams/ohcnapp_build.yaml
Description: >-
  This AWS Cloudformation template deploys a 3-tier architecture in the
  us-east-1 region or us-west-2
Parameters:
  EnvironmentName:
    Description: An environment name that is prefixed to resource names
    Type: String
    Default: AWSJams
  KeyPair:
    Description: >-
      Please enter the name of the SSH Key Pair for remote access to EC2
      instances
    Type: String
    Default: awsjams-pair
  DatabaseName:
    Description: Please enter the name of the MySQL database
    Type: String
    Default: demo-database
  MasterUsername:
    Description: Please enter the Master Username for the RDS Database
    Type: String
    Default:  dbadmin
  MasterUserPassword:
    Description: Please enter the Master Password for the RDS Database
    Type: String
    NoEcho: true
  MySQLDBSubnetGroupName:
    Description: Please enter name for RDS Database Instance Subnet Group
    Type: String
    Default: MySQLDBSubnetGroup
  VpcCIDR:
    Description: Please enter the IP range (CIDR notation) for this VPC
    Type: String
    Default: 10.100.0.0/16
  PublicSubnet1CIDR:
    Description: >-
      Please enter the IP range (CIDR notation) for the private subnet in the
      first Availability Zone
    Type: String
    Default: 10.100.1.0/24
  PublicSubnet2CIDR:
    Description: >-
      Please enter the IP range (CIDR notation) for the private subnet in the
      second Availability Zone
    Type: String
    Default: 10.100.2.0/24
  PublicSubnet3CIDR:
    Description: >-
      Please enter the IP range (CIDR notation) for the private subnet in the
      second Availability Zone
    Type: String
    Default: 10.100.3.0/24
  PrivateSubnet1CIDR:
    Description: >-
      Please enter the IP range (CIDR notation) for the public subnet in the
      first Availability Zone
    Type: String
    Default: 10.100.11.0/24
  PrivateSubnet2CIDR:
    Description: >-
      Please enter the IP range (CIDR notation) for the public subnet in the
      second Availability Zone
    Type: String
    Default: 10.100.12.0/24
  PrivateSubnet3CIDR:
    Description: >-
      Please enter the IP range (CIDR notation) for the public subnet in the
      third Availability Zone
    Type: String
    Default: 10.100.13.0/24
  PrivateSubnet4CIDR:
    Description: >-
      Please enter the IP range (CIDR notation) for the public subnet in the
      third Availability Zone
    Type: String
    Default: 10.100.14.0/24
Resources:
  VPC:
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock: !Ref VpcCIDR
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: !Sub '${EnvironmentName}-VPC'
        - Key: UseCase
          Value: !Sub '${EnvironmentName}'
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 4a55dc6a-05f3-4422-a04e-6fadd0caa643
  InternetGateway:
    Type: 'AWS::EC2::InternetGateway'
    DependsOn: VPC
    Properties:
      Tags:
        - Key: Name
          Value: !Sub '${EnvironmentName}-InternetGateway'
        - Key: UseCase
          Value: !Sub '${EnvironmentName}'
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 2eb41939-378b-4274-89da-0a088e31e5e4
  InternetGatewayAttachment:
    Type: 'AWS::EC2::VPCGatewayAttachment'
    DependsOn: InternetGateway
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 7f4b2be5-112c-4f5b-9cad-b41a84e1d05f
  PublicSubnet1:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select
        - 0
        - !GetAZs ''
      CidrBlock: !Ref PublicSubnet1CIDR
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub '${EnvironmentName}-Public-Web-Subnet-(AZ1)'
        - Key: UseCase
          Value: !Sub '${EnvironmentName}'
    Metadata:
      'AWS::CloudFormation::Designer':
        id: bb8d8b42-ee43-441f-b14e-10e6cc598d9d
  PublicSubnet2:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select
        - 1
        - !GetAZs ''
      CidrBlock: !Ref PublicSubnet2CIDR
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub '${EnvironmentName}-Public-Web-Subnet-(AZ2)'
        - Key: UseCase
          Value: !Sub '${EnvironmentName}'
    Metadata:
      'AWS::CloudFormation::Designer':
        id: b187c425-e019-4ae7-82f8-aaee12c32437
  PublicSubnet3:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select
        - 2
        - !GetAZs ''
      CidrBlock: !Ref PublicSubnet3CIDR
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub '${EnvironmentName}-Public-Web-Subnet-(AZ3)'
        - Key: UseCase
          Value: !Sub '${EnvironmentName}'
    Metadata:
      'AWS::CloudFormation::Designer':
        id: b0e2345d-a61e-44fd-bfc2-959d645f527c
  PrivateSubnet1:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select
        - 0
        - !GetAZs ''
      CidrBlock: !Ref PrivateSubnet1CIDR
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub '${EnvironmentName}-Private-App-Subnet-(AZ1)'
        - Key: UseCase
          Value: !Sub '${EnvironmentName}'
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 553db1ef-faa9-4534-b008-b319db1fb9ab
  PrivateSubnet2:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select
        - 1
        - !GetAZs ''
      CidrBlock: !Ref PrivateSubnet2CIDR
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub '${EnvironmentName}-Private-App-Subnet-(AZ2)'
        - Key: UseCase
          Value: !Sub '${EnvironmentName}'
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 1f04e264-c0ef-40b6-9de1-927d652b4691
  PrivateSubnet3:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select
        - 0
        - !GetAZs ''
      CidrBlock: !Ref PrivateSubnet3CIDR
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub '${EnvironmentName}-Private-Data-Subnet-(AZ1)'
        - Key: UseCase
          Value: !Sub '${EnvironmentName}'
    Metadata:
      'AWS::CloudFormation::Designer':
        id: a586be47-3698-48d6-b945-5f92c991615d
  PrivateSubnet4:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select
        - 1
        - !GetAZs ''
      CidrBlock: !Ref PrivateSubnet4CIDR
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub '${EnvironmentName}-Private-Data-Subnet-(AZ2)'
        - Key: UseCase
          Value: !Sub '${EnvironmentName}'
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 0f1a0c10-bbcd-4a6a-85c4-86d511070284
  NATElasticIP:
    Type: 'AWS::EC2::EIP'
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: !Sub '${EnvironmentName}-ElasticIP'
        - Key: UseCase
          Value: !Sub '${EnvironmentName}'
    Metadata:
      'AWS::CloudFormation::Designer':
        id: f4673aca-8800-4f88-a5b8-d81b0fce3218
  NatGateway:
    Type: 'AWS::EC2::NatGateway'
    DependsOn: PublicSubnet1
    Properties:
      ConnectivityType: public
      AllocationId: !GetAtt NATElasticIP.AllocationId
      SubnetId: !GetAtt PublicSubnet1.SubnetId
      Tags:
        - Key: Name
          Value: !Sub '${EnvironmentName}-NatGateway'
        - Key: UseCase
          Value: !Sub '${EnvironmentName}'
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 35b304fb-9203-418a-a416-a41e650c94fa
  PublicRouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub '${EnvironmentName}-PublicRouteTable'
        - Key: UseCase
          Value: !Sub '${EnvironmentName}'
    Metadata:
      'AWS::CloudFormation::Designer':
        id: cade2fd3-a7fd-4164-8d8f-107106ea3737
  DefaultPublicRoute:
    Type: 'AWS::EC2::Route'
    DependsOn: InternetGatewayAttachment
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 3abf60c1-98b9-4ffb-b022-f94878c64413
  PublicSubnet1RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    DependsOn: DefaultPublicRoute
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet1
  PublicSubnet2RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    DependsOn: DefaultPublicRoute
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet2
  PublicSubnet3RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    DependsOn: DefaultPublicRoute
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet3
  PrivateRouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub '${EnvironmentName}-PrivateRouteTable'
        - Key: UseCase
          Value: !Sub '${EnvironmentName}'
    Metadata:
      'AWS::CloudFormation::Designer':
        id: c3c9ee29-92d2-42f9-a1c0-9cb5957a1956
  DefaultPrivateRoute:
    Type: 'AWS::EC2::Route'
    DependsOn: NatGateway
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway
    Metadata:
      'AWS::CloudFormation::Designer':
        id: ce29f5dd-ba84-4d4d-8188-0935c0a452c3
  PrivateSubnet1RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    DependsOn: DefaultPrivateRoute
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      SubnetId: !Ref PrivateSubnet1
  PrivateSubnet2RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    DependsOn: DefaultPrivateRoute
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      SubnetId: !Ref PrivateSubnet2
  PrivateSubnet3RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    DependsOn: DefaultPrivateRoute
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      SubnetId: !Ref PrivateSubnet3
  PrivateSubnet4RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    DependsOn: DefaultPrivateRoute
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      SubnetId: !Ref PrivateSubnet4
  BastionHostSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    DependsOn: VPC
    Properties:
      GroupName: !Sub '${EnvironmentName}-BastionHost-SecurityGroup'
      GroupDescription: Security group for Bastion Host
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          CidrIp: 0.0.0.0/0
        - IpProtocol: icmp
          FromPort: 0
          ToPort: 0
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: '-1'
          FromPort: 0
          ToPort: 0
          CidrIp: 10.0.0.0/8
      VpcId: !Ref VPC
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 9b1de547-8255-4172-8e91-bf4a2dcfbeb2
  WebTierLBSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupName: !Sub '${EnvironmentName}-WebTierLB-SecurityGroup'
      GroupDescription: Security group for Web Tier Load Balancer
      VpcId: !Ref VPC
    Metadata:
      'AWS::CloudFormation::Designer':
        id: a85b648a-5531-40e3-964f-96ef8bccc23f
  WebTierLBSecurityGroupHTTPIngress:
    Type: 'AWS::EC2::SecurityGroupIngress'
    DependsOn: WebTierLBSecurityGroup
    Properties:
      CidrIp: 0.0.0.0/0
      Description: Allow HTTP from anywhere
      GroupId: !Ref WebTierLBSecurityGroup
      IpProtocol: tcp
      FromPort: 80
      ToPort: 80
  WebTierSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    DependsOn: BastionHostSecurityGroup
    Properties:
      GroupName: !Sub '${EnvironmentName}-WebTier-SecurityGroup'
      GroupDescription: Security group for Web Tier
      VpcId: !Ref VPC
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 9594b327-0522-4a5d-a274-d617a44f929d
  WebTierSecurityGroupHTTPIngress:
    Type: 'AWS::EC2::SecurityGroupIngress'
    DependsOn: WebTierLBSecurityGroup
    Properties:
      SourceSecurityGroupId: !GetAtt WebTierLBSecurityGroup.GroupId
      Description: Allow HTTP from Web Tier Load Balancer
      GroupId: !Ref WebTierSecurityGroup
      IpProtocol: tcp
      FromPort: 80
      ToPort: 80
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 8c035c02-e5f0-46af-9993-e8d03b194c36
  WebTierSecurityGroupSSHIngress:
    Type: 'AWS::EC2::SecurityGroupIngress'
    DependsOn: BastionHostSecurityGroup
    Properties:
      SourceSecurityGroupId: !GetAtt BastionHostSecurityGroup.GroupId
      Description: Allow SSH from Bastion Host
      GroupId: !GetAtt WebTierSecurityGroup.GroupId
      IpProtocol: tcp
      FromPort: 22
      ToPort: 22
    Metadata:
      'AWS::CloudFormation::Designer':
        id: ebf6d697-bbdc-40f6-afd2-531d0cd51fba
  AppTierLBSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupName: !Sub '${EnvironmentName}-AppTierLB-SecurityGroup'
      GroupDescription: Security group for App Tier Load Balancer
      VpcId: !Ref VPC
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 1b156a47-f429-48e5-bc80-55dc421df366
  AppTierLBSecurityGroupHTTPIngress:
    Type: 'AWS::EC2::SecurityGroupIngress'
    DependsOn: AppTierLBSecurityGroup
    Properties:
      SourceSecurityGroupId: !GetAtt WebTierSecurityGroup.GroupId
      Description: Allow HTTP from Web Tier Auto Scaling Group
      GroupId: !Ref AppTierLBSecurityGroup
      IpProtocol: tcp
      FromPort: 80
      ToPort: 80
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 991b96a8-ee7e-4d1e-bb36-0b3a9cc55ff5
  AppTierSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    DependsOn: WebTierSecurityGroup
    Properties:
      GroupName: !Sub '${EnvironmentName}-AppTier-SecurityGroup'
      GroupDescription: Security group for App Tier
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: '-1'
          FromPort: 0
          ToPort: 0
          CidrIp: 10.0.0.0/8
      VpcId: !Ref VPC
    Metadata:
      'AWS::CloudFormation::Designer':
        id: f19223c1-28d8-4e67-b096-e624dce353a0
#  DatabaseSecurityGroup:
#    Type: 'AWS::RDS::DBSecurityGroup'
#    DependsOn: AppTierSecurityGroup
#    Properties:
#      DBSecurityGroupIngress:
#        - EC2SecurityGroupId: !GetAtt AppTierSecurityGroup.GroupId
#        - EC2SecurityGroupId: !GetAtt BastionHostSecurityGroup.GroupId
#      EC2VpcId: !Ref VPC
#      GroupDescription: Security Group for Database Tier
  DatabaseSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    DependsOn:  AppTierSecurityGroup
    Properties:
      GroupDescription: SecurityGroup for Database Tier
      GroupName:  !Sub '${EnvironmentName}-DataTier-SecurityGroup'
      Tags:
        - Key: Name
          Value: !Sub '${EnvironmentName}-DataTier-SecurityGroup'
        - Key: UseCase
          Value: !Sub '${EnvironmentName}'
      VpcId: !Ref VPC
  DatabaseSecurityGroupIngressAppTier:
    Type:  'AWS::EC2::SecurityGroupIngress'
    DependsOn:  DatabaseSecurityGroup
    Properties:
      Description:  Allow Ingress from AppTier
      SourceSecurityGroupId:  !GetAtt AppTierSecurityGroup.GroupId
      GroupId:  !Ref DatabaseSecurityGroup
      IpProtocol: -1
#      SourceSecurityGroupName:  AppTierSecurityGroup
  DatabaseSecurityGroupIngressBastion:
    Type:  'AWS::EC2::SecurityGroupIngress'
    DependsOn:  DatabaseSecurityGroup
    Properties:
      Description:  AllowIngress from BastionHost
      GroupId:  !Ref DatabaseSecurityGroup
      IpProtocol: -1
      SourceSecurityGroupId:  !GetAtt BastionHostSecurityGroup.GroupId
#      SourceSecurityGroupName:  BastionHostSecurityGroup
  BastionHost:
    Type: 'AWS::EC2::Instance'
    DependsOn: BastionHostSecurityGroup
    Properties:
      ImageId: !FindInMap
        - RegionMap
        - !Ref 'AWS::Region'
        - EC2AMI
      KeyName: !Ref KeyPair
      InstanceType: t2.micro
      IamInstanceProfile: !Ref S3InstanceProfile
      NetworkInterfaces:
        - DeviceIndex: 0
          AssociatePublicIpAddress: true
          SubnetId: !GetAtt PublicSubnet3.SubnetId
          GroupSet:
            - !GetAtt BastionHostSecurityGroup.GroupId
      Tags:
        - Key: Name
          Value: !Sub '${EnvironmentName}-BastionHost'
        - Key: UseCase
          Value: !Sub '${EnvironmentName}'
      UserData:
        'Fn::Base64': !Sub |
          #!/bin/bash
          yum update -y
          yum install -y nmap
          yum install -y mysql
  S3InstanceProfile:
    Type: 'AWS::IAM::InstanceProfile'
    Properties:
        InstanceProfileName: !Sub '${EnvironmentName}-S3InstanceProfile'
        Roles:
          - !Ref 'S3FullAccess'
  ListS3BucketPolicy:
    Type: 'AWS::IAM::ManagedPolicy'
    Properties:
      ManagedPolicyName: ListS3BucketPolicy
      PolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Action:
              - 's3:List*'
            Resource: '*'
      Roles:
        - !Ref 'S3FullAccess'
  S3FullAccess:
    Type: 'AWS::IAM::Role'
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ec2.amazonaws.com
            Action:
              - 'sts:AssumeRole'
      Path: /
  WebTierLaunchTemplate:
    Type: 'AWS::EC2::LaunchTemplate'
    DependsOn: WebTierSecurityGroup
    Properties:
      LaunchTemplateName: !Sub '${EnvironmentName}-WebTier-LaunchTemplate'
      LaunchTemplateData:
        ImageId: !FindInMap
          - RegionMap
          - !Ref AWS::Region
          - EC2AMI
        InstanceType: t2.micro
        KeyName: !Ref KeyPair
        NetworkInterfaces:
          - DeviceIndex: 0
            AssociatePublicIpAddress: true
            Groups:
              - !Ref WebTierSecurityGroup
        UserData:
          'Fn::Base64': !Sub >
            #!/bin/bash

            yum update -y

            yum install -y httpd

            yum install -y nmap

            systemctl start httpd

            systemctl enable httpd

            EC2AZ=$(curl -s
            http://169.254.169.254/latest/meta-data/placement/availability-zone)

            echo '<center><h1>This Amazon EC2 instance is located in
            Availability Zone: AZID </h1></center>' > /var/www/html/index.txt

            sed "s/AZID/$EC2AZ/" /var/www/html/index.txt >
            /var/www/html/index.html
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 4b3345af-b6c0-4ff8-b9c8-bebbc576c034
  WebTierApplicationLoadBalancer:
    Type: 'AWS::ElasticLoadBalancingV2::LoadBalancer'
    DependsOn: InternetGatewayAttachment
    Properties:
      Name: !Sub '${EnvironmentName}-WebTier-LoadBalancer'
      Type: application
      IpAddressType: ipv4
      Scheme: internet-facing
      SecurityGroups:
        - !GetAtt WebTierLBSecurityGroup.GroupId
      Subnets:
        - !Ref PublicSubnet1
        - !Ref PublicSubnet2
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 6ad9a5fa-f50a-4ed6-b710-1bef1a26f81b
  WebTierTargetGroup:
    Type: 'AWS::ElasticLoadBalancingV2::TargetGroup'
    Properties:
      Name: !Sub '${EnvironmentName}-WebTier-TargetGroup'
      HealthCheckIntervalSeconds: 30
      HealthCheckPath: /
      Port: 80
      Protocol: HTTP
      HealthyThresholdCount: 5
      UnhealthyThresholdCount: 2
      TargetType: instance
      Matcher:
        HttpCode: '200'
      VpcId: !Ref VPC
    Metadata:
      'AWS::CloudFormation::Designer':
        id: ea3588cf-c409-444c-ae4d-0b68444328b2
  WebTierHTTPListener:
    Type: 'AWS::ElasticLoadBalancingV2::Listener'
    DependsOn: WebTierTargetGroup
    Properties:
      LoadBalancerArn: !Ref WebTierApplicationLoadBalancer
      Port: 80
      Protocol: HTTP
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref WebTierTargetGroup
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 6b2df9f2-7098-4432-8c01-1f086381b5b4
  WebTierAutoScalingGroup:
    Type: 'AWS::AutoScaling::AutoScalingGroup'
    DependsOn: WebTierLaunchTemplate
    Properties:
      AutoScalingGroupName: !Sub '${EnvironmentName}-WebTier-AutoScaleGroup'
      DesiredCapacity: 2
      MinSize: 2
      MaxSize: 3
      LaunchTemplate:
        LaunchTemplateId: !Ref WebTierLaunchTemplate
        Version: !GetAtt WebTierLaunchTemplate.LatestVersionNumber
      TargetGroupARNs:
        - !Ref WebTierTargetGroup
      VPCZoneIdentifier:
        - !Ref PublicSubnet1
        - !Ref PublicSubnet2
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 27aade81-f59f-48e7-9bf2-3e6fa3529f30
  AppTierLaunchTemplate:
    Type: 'AWS::EC2::LaunchTemplate'
    DependsOn: AppTierSecurityGroup
    Properties:
      LaunchTemplateName: !Sub '${EnvironmentName}-AppTier-LaunchTemplate'
      LaunchTemplateData:
        ImageId: !FindInMap
          - RegionMap
          - !Ref 'AWS::Region'
          - EC2AMI
        InstanceType: t2.micro
        KeyName: !Ref KeyPair
        NetworkInterfaces:
          - DeviceIndex: 0
            AssociatePublicIpAddress: false
            Groups:
              - !Ref AppTierSecurityGroup
        UserData:
          'Fn::Base64': !Sub >
            #!/bin/bash

            yum update -y

            yum install -y httpd

            yum install -y nmap

            yum install -y mysql

            systemctl start httpd

            systemctl enable httpd

            echo '<center><h1>This is the Application tier! </h1></center>' >
            /var/www/html/index.html
    Metadata:
      'AWS::CloudFormation::Designer':
        id: e7579006-7244-49f6-a26c-df8d8e038922
  AppTierApplicationLoadBalancer:
    Type: 'AWS::ElasticLoadBalancingV2::LoadBalancer'
    DependsOn: AppTierLBSecurityGroup
    Properties:
      Name: !Sub '${EnvironmentName}-AppTier-LoadBalancer'
      Type: application
      IpAddressType: ipv4
      Scheme: internal
      SecurityGroups:
        - !GetAtt AppTierLBSecurityGroup.GroupId
      Subnets:
        - !Ref PrivateSubnet1
        - !Ref PrivateSubnet2
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 169ea3be-df71-4ecb-bd0c-d522961e4df0
  AppTierTargetGroup:
    Type: 'AWS::ElasticLoadBalancingV2::TargetGroup'
    Properties:
      Name: !Sub '${EnvironmentName}-AppTier-TargetGroup'
      HealthCheckIntervalSeconds: 30
      HealthCheckPath: /
      Port: 80
      Protocol: HTTP
      HealthyThresholdCount: 5
      UnhealthyThresholdCount: 2
      TargetType: instance
      Matcher:
        HttpCode: '200'
      VpcId: !Ref VPC
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 25aad193-932c-4ac6-b7d1-98e57f801d84
  AppTierHTTPListener:
    Type: 'AWS::ElasticLoadBalancingV2::Listener'
    DependsOn: AppTierTargetGroup
    Properties:
      LoadBalancerArn: !Ref AppTierApplicationLoadBalancer
      Port: 80
      Protocol: HTTP
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref AppTierTargetGroup
    Metadata:
      'AWS::CloudFormation::Designer':
        id: bed913da-96fe-4f96-82c5-3675957c73b4
  AppTierAutoScalingGroup:
    Type: 'AWS::AutoScaling::AutoScalingGroup'
    DependsOn: AppTierLaunchTemplate
    Properties:
      AutoScalingGroupName: !Sub '${EnvironmentName}-AppTier-AutoScaleGroup'
      DesiredCapacity: 2
      MinSize: 2
      MaxSize: 3
      LaunchTemplate:
        LaunchTemplateId: !Ref AppTierLaunchTemplate
        Version: !GetAtt AppTierLaunchTemplate.LatestVersionNumber
      TargetGroupARNs:
        - !Ref AppTierTargetGroup
      VPCZoneIdentifier:
        - !Ref PrivateSubnet1
        - !Ref PrivateSubnet2
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 4ca63d14-a327-425d-98d7-374e1caad7e9
  MySQLDBSubnetGroup:
    Type: 'AWS::RDS::DBSubnetGroup'
    Properties:
      DBSubnetGroupDescription: Subnets for MySQL RDS Instances
      DBSubnetGroupName: !Ref MySQLDBSubnetGroupName
      SubnetIds:
        - !GetAtt PrivateSubnet3.SubnetId
        - !GetAtt PrivateSubnet4.SubnetId
    Metadata:
      'AWS::CloudFormation::Designer':
        id: fdbaf9d5-b804-4ea2-8662-2b7512691e55
  MySQLDatabase:
    Type: 'AWS::RDS::DBInstance'
    DependsOn: MySQLDBSubnetGroup
    Properties:
      Engine: mysql
      EngineVersion: 8.0.32
      DBInstanceIdentifier: !Ref DatabaseName
      VPCSecurityGroups:
      - !GetAtt DatabaseSecurityGroup.GroupId
#      DBSecurityGroups:
#        - !Ref DatabaseSecurityGroup
      DBSubnetGroupName: !Ref MySQLDBSubnetGroup
      MasterUsername: !Ref MasterUsername
      MasterUserPassword: !Ref MasterUserPassword
      DBInstanceClass: db.t2.small
      MultiAZ: true
      AllocatedStorage: 20
      Tags:
        - Key: UseCase
          Value: !Sub '${EnvironmentName}'
        - Key: Sensitivity
          Value: true
    Metadata:
      'AWS::CloudFormation::Designer':
        id: af34b92b-9564-4973-aa57-1aaf20c9c3be
Outputs:
  BastionHostPIP:
    Description: The Public IP Address of the Bastion Host
    Value: !GetAtt BastionHost.PublicIp
  WebTierLoadBalancerURL:
    Description: The URL of the Web Tier Application Load Balancer
    Value: !GetAtt WebTierApplicationLoadBalancer.DNSName
  AppTierLoadBalancerURL:
    Description: The URL of the App Tier Application Load Balancer
    Value: !GetAtt AppTierApplicationLoadBalancer.DNSName
  MySQLDatabaseEndpointAddress:
    Description: The FQDN of the MySQL Database
    Value: !GetAtt MySQLDatabase.Endpoint.Address
  MySQLDatabasePort:
    Description: The TCP port of the MySQL Database
    Value: !GetAtt MySQLDatabase.Endpoint.Port
Metadata:
  'AWS::CloudFormation::Designer':
    f4673aca-8800-4f88-a5b8-d81b0fce3218:
      size:
        width: 60
        height: 60
      position:
        x: 780
        'y': 720
      z: 1
      embeds: []
    4a55dc6a-05f3-4422-a04e-6fadd0caa643:
      size:
        width: 420
        height: 330
      position:
        x: 60
        'y': 90
      z: 1
      embeds:
        - 1b156a47-f429-48e5-bc80-55dc421df366
        - a85b648a-5531-40e3-964f-96ef8bccc23f
        - 9b1de547-8255-4172-8e91-bf4a2dcfbeb2
        - 9594b327-0522-4a5d-a274-d617a44f929d
        - f19223c1-28d8-4e67-b096-e624dce353a0
        - c8894c5a-f263-4682-98b7-6de03457343f
    25aad193-932c-4ac6-b7d1-98e57f801d84:
      size:
        width: 60
        height: 60
      position:
        x: 900
        'y': 720
      z: 1
      embeds: []
    ea3588cf-c409-444c-ae4d-0b68444328b2:
      size:
        width: 60
        height: 60
      position:
        x: 60
        'y': 780
      z: 1
      embeds: []
    1b156a47-f429-48e5-bc80-55dc421df366:
      size:
        width: 60
        height: 60
      position:
        x: 90
        'y': 150
      z: 2
      parent: 4a55dc6a-05f3-4422-a04e-6fadd0caa643
      embeds: []
      iscontainedinside:
        - 4a55dc6a-05f3-4422-a04e-6fadd0caa643
    a85b648a-5531-40e3-964f-96ef8bccc23f:
      size:
        width: 60
        height: 60
      position:
        x: 210
        'y': 150
      z: 2
      parent: 4a55dc6a-05f3-4422-a04e-6fadd0caa643
      embeds: []
      iscontainedinside:
        - 4a55dc6a-05f3-4422-a04e-6fadd0caa643
    9b1de547-8255-4172-8e91-bf4a2dcfbeb2:
      size:
        width: 60
        height: 60
      position:
        x: 90
        'y': 270
      z: 2
      parent: 4a55dc6a-05f3-4422-a04e-6fadd0caa643
      embeds: []
      dependson:
        - 4a55dc6a-05f3-4422-a04e-6fadd0caa643
    9594b327-0522-4a5d-a274-d617a44f929d:
      size:
        width: 60
        height: 60
      position:
        x: 210
        'y': 270
      z: 2
      parent: 4a55dc6a-05f3-4422-a04e-6fadd0caa643
      embeds: []
      iscontainedinside:
        - 4a55dc6a-05f3-4422-a04e-6fadd0caa643
      dependson:
        - 9b1de547-8255-4172-8e91-bf4a2dcfbeb2
    4b3345af-b6c0-4ff8-b9c8-bebbc576c034:
      size:
        width: 60
        height: 60
      position:
        x: 180
        'y': 780
      z: 1
      embeds: []
    f19223c1-28d8-4e67-b096-e624dce353a0:
      size:
        width: 60
        height: 60
      position:
        x: 330
        'y': 150
      z: 2
      parent: 4a55dc6a-05f3-4422-a04e-6fadd0caa643
      embeds: []
      iscontainedinside:
        - 4a55dc6a-05f3-4422-a04e-6fadd0caa643
      dependson:
        - 9594b327-0522-4a5d-a274-d617a44f929d
    e7579006-7244-49f6-a26c-df8d8e038922:
      size:
        width: 60
        height: 60
      position:
        x: 780
        'y': 840
      z: 1
      embeds: []
    c8894c5a-f263-4682-98b7-6de03457343f:
      size:
        width: 60
        height: 60
      position:
        x: 330
        'y': 270
      z: 2
      parent: 4a55dc6a-05f3-4422-a04e-6fadd0caa643
      embeds: []
      isassociatedwith:
        - 9b1de547-8255-4172-8e91-bf4a2dcfbeb2
      iscontainedinside:
        - 4a55dc6a-05f3-4422-a04e-6fadd0caa643
      dependson:
        - f19223c1-28d8-4e67-b096-e624dce353a0
    991b96a8-ee7e-4d1e-bb36-0b3a9cc55ff5:
      source:
        id: 9594b327-0522-4a5d-a274-d617a44f929d
      target:
        id: 1b156a47-f429-48e5-bc80-55dc421df366
    ebf6d697-bbdc-40f6-afd2-531d0cd51fba:
      source:
        id: 9b1de547-8255-4172-8e91-bf4a2dcfbeb2
      target:
        id: 9594b327-0522-4a5d-a274-d617a44f929d
    8c035c02-e5f0-46af-9993-e8d03b194c36:
      source:
        id: a85b648a-5531-40e3-964f-96ef8bccc23f
      target:
        id: 9594b327-0522-4a5d-a274-d617a44f929d
    c3c9ee29-92d2-42f9-a1c0-9cb5957a1956:
      size:
        width: 150
        height: 150
      position:
        x: 780
        'y': 510
      z: 1
      embeds: []
    cade2fd3-a7fd-4164-8d8f-107106ea3737:
      size:
        width: 150
        height: 150
      position:
        x: 570
        'y': 720
      z: 1
      embeds: []
    0f1a0c10-bbcd-4a6a-85c4-86d511070284:
      size:
        width: 150
        height: 150
      position:
        x: 360
        'y': 720
      z: 1
      embeds: []
    a586be47-3698-48d6-b945-5f92c991615d:
      size:
        width: 150
        height: 150
      position:
        x: 750
        'y': 300
      z: 1
      embeds: []
    fdbaf9d5-b804-4ea2-8662-2b7512691e55:
      size:
        width: 150
        height: 150
      position:
        x: 750
        'y': 90
      z: 1
      embeds: []
    af34b92b-9564-4973-aa57-1aaf20c9c3be:
      size:
        width: 60
        height: 60
      position:
        x: 900
        'y': 840
      z: 1
      embeds: []
    1f04e264-c0ef-40b6-9de1-927d652b4691:
      size:
        width: 150
        height: 150
      position:
        x: 570
        'y': 510
      z: 1
      embeds: []
    553db1ef-faa9-4534-b008-b319db1fb9ab:
      size:
        width: 150
        height: 150
      position:
        x: 360
        'y': 510
      z: 1
      embeds: []
    4ca63d14-a327-425d-98d7-374e1caad7e9:
      size:
        width: 60
        height: 60
      position:
        x: 60
        'y': 900
      z: 1
      embeds: []
      isassociatedwith:
        - 25aad193-932c-4ac6-b7d1-98e57f801d84
      iscontainedinside:
        - 553db1ef-faa9-4534-b008-b319db1fb9ab
        - 1f04e264-c0ef-40b6-9de1-927d652b4691
    169ea3be-df71-4ecb-bd0c-d522961e4df0:
      size:
        width: 60
        height: 60
      position:
        x: 180
        'y': 900
      z: 1
      embeds: []
      iscontainedinside:
        - 553db1ef-faa9-4534-b008-b319db1fb9ab
        - 1f04e264-c0ef-40b6-9de1-927d652b4691
      dependson:
        - 1b156a47-f429-48e5-bc80-55dc421df366
    bed913da-96fe-4f96-82c5-3675957c73b4:
      size:
        width: 60
        height: 60
      position:
        x: 300
        'y': 930
      z: 1
      embeds: []
    b0e2345d-a61e-44fd-bfc2-959d645f527c:
      size:
        width: 240
        height: 240
      position:
        x: 60
        'y': 480
      z: 1
      embeds: []
    b187c425-e019-4ae7-82f8-aaee12c32437:
      size:
        width: 150
        height: 150
      position:
        x: 540
        'y': 300
      z: 1
      embeds: []
    bb8d8b42-ee43-441f-b14e-10e6cc598d9d:
      size:
        width: 150
        height: 150
      position:
        x: 540
        'y': 90
      z: 1
      embeds: []
    27aade81-f59f-48e7-9bf2-3e6fa3529f30:
      size:
        width: 60
        height: 60
      position:
        x: 420
        'y': 930
      z: 1
      embeds: []
      isassociatedwith:
        - ea3588cf-c409-444c-ae4d-0b68444328b2
      iscontainedinside:
        - bb8d8b42-ee43-441f-b14e-10e6cc598d9d
        - b187c425-e019-4ae7-82f8-aaee12c32437
    35b304fb-9203-418a-a416-a41e650c94fa:
      size:
        width: 60
        height: 60
      position:
        x: 540
        'y': 930
      z: 1
      embeds: []
    ce29f5dd-ba84-4d4d-8188-0935c0a452c3:
      size:
        width: 60
        height: 60
      position:
        x: 660
        'y': 930
      z: 1
      embeds: []
    2eb41939-378b-4274-89da-0a088e31e5e4:
      size:
        width: 60
        height: 60
      position:
        x: 960
        'y': 90
      z: 1
      embeds: []
      dependson:
        - 4a55dc6a-05f3-4422-a04e-6fadd0caa643
    7f4b2be5-112c-4f5b-9cad-b41a84e1d05f:
      source:
        id: 4a55dc6a-05f3-4422-a04e-6fadd0caa643
      target:
        id: 2eb41939-378b-4274-89da-0a088e31e5e4
    6ad9a5fa-f50a-4ed6-b710-1bef1a26f81b:
      size:
        width: 60
        height: 60
      position:
        x: 960
        'y': 210
      z: 1
      embeds: []
      isassociatedwith:
        - a85b648a-5531-40e3-964f-96ef8bccc23f
      iscontainedinside:
        - bb8d8b42-ee43-441f-b14e-10e6cc598d9d
        - b187c425-e019-4ae7-82f8-aaee12c32437
      dependson:
        - 7f4b2be5-112c-4f5b-9cad-b41a84e1d05f
    6b2df9f2-7098-4432-8c01-1f086381b5b4:
      size:
        width: 60
        height: 60
      position:
        x: 960
        'y': 330
      z: 1
      embeds: []
    3abf60c1-98b9-4ffb-b022-f94878c64413:
      size:
        width: 60
        height: 60
      position:
        x: 990
        'y': 450
      z: 1
      embeds: []
      dependson:
        - 7f4b2be5-112c-4f5b-9cad-b41a84e1d05f
Mappings:
  RegionMap:
     us-west-1:
        EC2AMI: ami-08d5c2c27495d734a
     us-west-2:
        EC2AMI: ami-09100e341bda441c0
     us-east-1:
        EC2AMI: ami-0b0dcb5067f052a63
     us-east-2:
        EC2AMI: ami-0aec300fa613b1c92
